# pidrone_pkgtest

./: .cursorignore  .gitignore  CMakeLists.txt  Dockerfile  opt.screenrc  pi.screenrc
aruco_pose/: CMakeLists.txt  package.xml
aruco_pose/cfg/: Detector.cfg  Map.cfg
aruco_pose/launch/: aruco.launch  aruco_detect_only.launch  camera_only.launch  sample.launch
aruco_pose/msg/: Marker.msg  MarkerArray.msg
aruco_pose/scripts/: setup_aruco_links.py
aruco_pose/src/: aruco_detect.py  aruco_map.py  aruco_utils.py
aruco_pose/srv/: SetMarkers.srv
folder/catkin_ws/src/optical_flow/: CMakeLists.txt  nodelet_plugins.xml  package.xml
folder/catkin_ws/src/optical_flow/src/: optical_flow.cpp
folder/catkin_ws/src/vpe_publisher/: CMakeLists.txt  package.xml
inavmspapi/: __init__.py  msp_codes.py  rangefinder.py  transmitter.py
launch/: altitude_control.launch  aruco_recognition.launch  optical_flow_relay.launch  rangefinder_relay.launch  raspicam_node.launch  tof.launch
scripts/: aruco_pose_node.py  check_camera.sh  command_values.py  drone_height_simulator.py  drone_simulator_standalone.py  flight_controller_node.py  h2rMultiWii.py  height_control_flight.py  inav_flow_relay.py  optical_flow.cpp  optical_flow_inav.py  optical_flow_node.py  optical_flow_test.py  pid_class.py  pid_class_new.py  pid_controller.py  pid_standalone.py  pid_tuning_simulator.py  rigid_transform_node.py  run_simulators.py  state_estimator.py  test_aruco.py  test_flight.py  test_hover_throttle.py  test_msp2_altitude_control.py  test_msp2_altitude_control_client.py  test_msp2_optical_flow.py  test_msp2_sensor_range.py  test_rangefinder.py
scripts/StateEstimators/: state_estimator_ema.py  state_estimator_ukf_7d.py
scripts/archive/UKF/: state_estimator_ukf_7d.py
scripts/aruco/: README.md  aruco_marker_recognizer.py  recognition_of_aruco_marker_node.py  recognition_setting.py  sample_map.txt  setup_aruco.sh
scripts/aruco/launch/: aruco.launch  optical_flow_inav.launch  optical_flow_test.launch
scripts/aruco/msg/: MarkerArray.msg
scripts/aruco/src/: aruco_detect.py  aruco_draw.py  aruco_utils.py
web/: index.html
web/css/: main.css
web/js/: main.js
