<?xml version="1.0"?>
<package format="2">
  <name>aruco_pose</name>
  <version>0.1.0</version>
  <description>ArUco markers detection and pose estimation</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>cv_bridge</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Скрипт, который будет выполнен при установке пакета -->
    <catkin_scripts>
      <script>scripts/setup_aruco_links.py</script>
    </catkin_scripts>
  </export>
</package> 